--- a/src/layouts/plantillaBasica.astro
+++ b/src/layouts/plantillaBasica.astro
@@ -1,6 +1,7 @@
 ---
 import BaseHead from "../components/BaseHead.astro"
-import "../styles/global.css"
+import Footer from "../components/footer.astro";
+import "../styles/reset.css"
 import "../styles/variables.css"
 const idioma = Astro.currentLocale || "es";
 const { titulo, descripcion } = Astro.props;
@@ -11,6 +12,7 @@ const { titulo, descripcion } = Astro.props;
   <BaseHead title={titulo} description={descripcion} />
   <body>
     <slot />
+    <Footer />
     </body>
 </html>
 
