--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import PlantillaBasica from "../layouts/plantillaBasica.astro"
+import Hero from "../components/hero.astro"
 ---
 
 <PlantillaBasica>
-	
+	<Hero />
 </PlantillaBasica>	
