--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -79,6 +79,8 @@ import logo from "../assets/logo.png"
   
   .logo {
     display: none;
+    /* 📲 Tablet: 601px – 1024px */
+    
     @media (min-width: 1025px) {
       display: block;
     }
