Hago pequeño cambio en el menú

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -96,6 +96,7 @@ margin: 1rem;
   left: 0;
   top: 0;
   background-color: var(--color-principal);
+  color: var(--color-background);
   
   .nav__icono {
     width: 4rem;
@@ -123,6 +124,9 @@ margin: 1rem;
 }
 .nav--escritorio {
  display: none;
+ ul {
+    display: none;
+ }
  /* 💻 Desktop: ≥1025px */
  @media (min-width: 1025px) {
    display: flex;
