Instalo fuente para encabezados

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -7,7 +7,7 @@ import logo from "../assets/logo.png"
   <div>
     <hgroup class="hero__hgroup">
       <h1>Asociación de Cerveceros Caseros de Canarias</h1>
-      <p>La única asociación canarias que hace cerveza</p>
+      <p>La única asociación canaria que hace cerveza</p>
     </hgroup>
     
     <a class="hero__a" href="/eventos">Próximos eventos</a> 
@@ -51,6 +51,8 @@ import logo from "../assets/logo.png"
       line-height: 1;
       margin-block: 1rem;
     }
+    
+
   }
 
   .hero__a {
