--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -41,6 +41,7 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   text-wrap: balance;
+  font-family: "Bricolage Grotesque 96pt";
 }
 
 /* ===== Layout base (footer siempre abajo) ===== */
