--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   /* Tipografía */
-  --font-heading: "Playfair Display", serif;
+  --font-heading: "Bricolage Grotesque 96pt", serif;
   --font-body: "Nunito", sans-serif;
   --font-code: "Fira Code", monospace;
 
