--- a/src/layouts/plantillaBasica.astro
+++ b/src/layouts/plantillaBasica.astro
@@ -4,6 +4,7 @@ import Footer from "../components/footer.astro";
 import Header from "../components/header.astro";
 import "../styles/reset.css"
 import "../styles/variables.css"
+import "../styles/fonts.css"
 const idioma = Astro.currentLocale || "es";
 const { titulo, descripcion } = Astro.props;
 ---
