Corrijo palabra mal escrita

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,7 +4,7 @@ import logo from "../assets/logo.png"
 ---
 
 <header class="header">
-    <p class="header__p">ASCCECA</p>
+    <p class="header__p">ASCECCA</p>
 
     <!-- <Image class="logo" src={logo} alt="logo de ascecca" /> -->
 
