--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,6 +1,5 @@
 ---
-import { Image } from "astro:assets"; 
-import logo from "../assets/logo.png"
+const Base = import.meta.env.BASE_URL; // => '/ascecca/'
 ---
 
 <header class="header">
@@ -42,8 +41,8 @@ import logo from "../assets/logo.png"
 
 <nav class="nav--escritorio">
    <ul class="nav__ul">
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">¿Quienes somos?</a></li>
+          <li><a href=`${Base}`>Home</a></li>
+          <li><a href=`${Base}about`>¿Quienes somos?</a></li>
     </ul> 
 </nav>
    
