Añadir pagina eventos

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -11,6 +11,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin-top: auto;                 /* tamaño natural */
+
   p {
     margin: auto;
   }
