--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,5 +1,5 @@
 ---
-const Base = import.meta.env.BASE_URL; // => '/ascecca/'
+const Base = import.meta.env.BASE_URL; // => '/ascecca'
 ---
 
 <header class="header">
@@ -42,7 +42,8 @@ const Base = import.meta.env.BASE_URL; // => '/ascecca/'
 <nav class="nav--escritorio">
    <ul class="nav__ul">
           <li><a href=`${Base}`>Home</a></li>
-          <li><a href=`${Base}about`>¿Quienes somos?</a></li>
+          <li><a href=`${Base}/about`>¿Quienes somos?</a></li>
+          <li><a href=`${Base}/events`>Eventos</a></li>
     </ul> 
 </nav>
    
