--- a/src/layouts/plantillaBasica.astro
+++ b/src/layouts/plantillaBasica.astro
@@ -23,14 +23,17 @@ const { titulo, descripcion } = Astro.props;
 
 <style>
   body {
+    min-height: 100dvh
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
   }
   main {
-    
-    /* min-height: 100vh; */
+    margin-top: auto;
     display: flex;
+    flex-direction: column;
+    text-align: center;
+    
   }
+  
 </style>
 
