--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -25,7 +25,7 @@ import logo from "../assets/logo.png"
     flex-direction: column;
     padding: 1rem;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
 
 
     /* 📲 Tablet: 601px – 1024px */
@@ -42,7 +42,12 @@ import logo from "../assets/logo.png"
   div {
     display: flex;
     flex-direction: column;
-    max-width: 50%;
+    @media (min-width: 601px) and (max-width: 1024px) {
+      max-width: 75%;
+    } 
+    @media (min-width: 1025px) {
+      
+    }
   }
   .hero__hgroup {
     margin-bottom: 1rem;
