Arreglé enlaces del menu oculto

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -34,8 +34,9 @@ const Base = import.meta.env.BASE_URL; // => '/ascecca'
 
       </label>
         <ul class="nav__ul">
-          <li><a href="/">Home</a></li>
-          <li><a href="dos.html">¿Quienes somos?</a></li>
+          <li><a href=`${Base}`>Home</a></li>
+          <li><a href=`${Base}/about`>¿Quienes somos?</a></li>
+          <li><a href=`${Base}/events`>Eventos</a></li>
         </ul>
 </nav>
 
