borré sin querer algo, lo volví a restaurar XD

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -46,7 +46,7 @@ import logo from "../assets/logo.png"
       max-width: 75%;
     } 
     @media (min-width: 1025px) {
-      
+      max-width: 50%;
     }
   }
   .hero__hgroup {
