mejoro el aspecto de la pagina de eventos

--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -6,21 +6,20 @@ import Cerveza from "../assets/images.jpg"
 
 <PlantillaBasica >
 
-<h1>Eventos</h1>
+
 <section>
+  
   <hgroup>
-    <h2>Próximos eventos</h2>
+    <h1>Próximos Eventos</h1>
     <p>
       Reserva la fecha y participa con nosotros en estos próximos eventos.
     </p>
   </hgroup>
   <div>
     <EventsCard src={Cerveza}  titulo="Encuentro en Tenerife" fecha="25 de octubre", ubicacion="La Laguna", descripcion="Encuentro anual en Tenerife dónde podremos compartir nuestra cerveza"/>
-    <EventsCard src={Cerveza}  titulo="" fecha="25 de octubre", ubicacion="La Laguna", descripcion="Encuentro anual en Tenerife dónde podremos compartir nuestra cerveza"/>
-    <EventsCard src={Cerveza}  titulo="" fecha="25 de octubre", ubicacion="La Laguna", descripcion="Encuentro anual en Tenerife dónde podremos compartir nuestra cerveza"/>
-    <EventsCard src={Cerveza}  titulo="" fecha="25 de octubre", ubicacion="La Laguna", descripcion="Encuentro anual en Tenerife dónde podremos compartir nuestra cerveza"/>
-    <EventsCard src={Cerveza}  titulo="" fecha="25 de octubre", ubicacion="La Laguna", descripcion="Encuentro anual en Tenerife dónde podremos compartir nuestra cerveza"/>
-    <EventsCard src={Cerveza}  titulo="" fecha="25 de octubre", ubicacion="La Laguna", descripcion="Encuentro anual en Tenerife dónde podremos compartir nuestra cerveza"/>
+    <EventsCard src={Cerveza}  titulo="Encuentro en Tenerife" fecha="25 de octubre", ubicacion="La Laguna", descripcion="Encuentro anual en Tenerife dónde podremos compartir nuestra cerveza"/>
+    <EventsCard src={Cerveza}  titulo="Encuentro en Tenerife" fecha="25 de octubre", ubicacion="La Laguna", descripcion="Encuentro anual en Tenerife dónde podremos compartir nuestra cerveza"/>
+   
   </div>
 </section>
 
@@ -29,16 +28,44 @@ import Cerveza from "../assets/images.jpg"
   <h2>Eventos pasados</h2>
 	<p>Echa un vistazo a nuestros últimos eventos</p>
 </hgroup>
+<div>
+
+  <EventsCard src={Cerveza}  titulo="Encuentro en Tenerife" fecha="25 de octubre", ubicacion="La Laguna", descripcion="Encuentro anual en Tenerife dónde podremos compartir nuestra cerveza"/>
+  <EventsCard src={Cerveza}  titulo="Encuentro en Tenerife" fecha="25 de octubre", ubicacion="La Laguna", descripcion="Encuentro anual en Tenerife dónde podremos compartir nuestra cerveza"/>
+  <EventsCard src={Cerveza}  titulo="Encuentro en Tenerife" fecha="25 de octubre", ubicacion="La Laguna", descripcion="Encuentro anual en Tenerife dónde podremos compartir nuestra cerveza"/>
+</div>
 </section>
 
 </PlantillaBasica>	
 
 <style>
+  section {
+    display: flex;
+    flex-direction: column;
+    margin-block: 1rem;
+      align-items: center;
+    @media (min-width: 1025px) {
+      
+    }
+    
+  }
+  hgroup {
+    margin-block: 3rem;
+    p{
+      margin-inline: auto;
+    }
+     @media (min-width: 1025px) {
+      
+    }
+  }
  div {
   display: flex;
   flex-wrap: wrap;
-  padding-inline: 3rem;
-  gap: 1rem;
+  gap: 2rem;
   justify-content: center;
+   @media (min-width: 1025px) {
+      max-width: 89%;
+      gap: 4rem;
+    }
  }
 </style>
