--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -65,7 +65,7 @@ margin: 1rem;
 .header__p {
     font-family: var(--font-heading);
     height: 100%;
-    width: 4rem;
+    
     display: flex;
     padding: 1rem;
     text-align: center;
@@ -108,6 +108,7 @@ margin: 1rem;
     right: 0;
   }
   .nav__ul {
+    
     margin-top: 4rem;
     li {
       margin: var(--espacio-s);
@@ -129,16 +130,20 @@ margin: 1rem;
  ul {
     display: none;
  }
+
  /* 💻 Desktop: ≥1025px */
  @media (min-width: 1025px) {
    display: flex;
+   flex: 1;
+   justify-content: center;
    
    ul {
      display: flex;
-     gap: 1rem;
+     
+     gap: 3rem;
      align-items: center;
      li {
-         padding-inline: 1rem;
+         
          a {
              text-decoration: none;
              color: inherit;
