añado página about

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -34,7 +34,7 @@ const Base = import.meta.env.BASE_URL; // => '/ascecca'
 
       </label>
         <ul class="nav__ul">
-          <li><a href=`${Base}`>Home</a></li>
+          <li><a href=`${Base}`>Inicio</a></li>
           <li><a href=`${Base}/about`>¿Quienes somos?</a></li>
           <li><a href=`${Base}/events`>Eventos</a></li>
         </ul>
@@ -42,7 +42,7 @@ const Base = import.meta.env.BASE_URL; // => '/ascecca'
 
 <nav class="nav--escritorio">
    <ul class="nav__ul">
-          <li><a href=`${Base}`>Home</a></li>
+          <li><a href=`${Base}`>Inicio</a></li>
           <li><a href=`${Base}/about`>¿Quienes somos?</a></li>
           <li><a href=`${Base}/events`>Eventos</a></li>
     </ul> 
