--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,13 +6,13 @@ import Hero from "../components/hero.astro"
 <PlantillaBasica>
 
 	<Hero />
-	<section>
+	<!-- <section>
 		
 		
 		<h2>Empieza a elaborar</h2>
 		<p>Visita nuestra guía para saber todo lo que necesitas para hacer cerveza en casa</p>
 		<a href="">Guia de elaboración</a>
-	</section>
+	</section> -->
 </PlantillaBasica>	
 
 <style>
