Añado titulo y descripción a pagina de inicio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import PlantillaBasica from "../layouts/plantillaBasica.astro"
 import Hero from "../components/hero.astro"
+const titulo= "Cerveza casera en Canarias | Asociación de Homebrewers"
+const descripcion = "Aprende, comparte y disfruta la cerveza casera en Canarias: guías paso a paso, recetas, calculadoras, talleres y comunidad por islas."
 ---
 
-<PlantillaBasica>
+<PlantillaBasica titulo={titulo} descripcion={descripcion}>
 
 	<Hero />
 	<!-- <section>
