--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,5 +1,5 @@
 ---
-const Base = import.meta.env.BASE_URL; // => '/ascecca'
+import NavList from "./NavList.astro"
 ---
 
 <header class="header">
@@ -33,19 +33,11 @@ const Base = import.meta.env.BASE_URL; // => '/ascecca'
 </svg>
 
       </label>
-        <ul class="nav__ul">
-          <li><a href=`${Base}`>Inicio</a></li>
-          <li><a href=`${Base}/about`>¿Quienes somos?</a></li>
-          <li><a href=`${Base}/events`>Eventos</a></li>
-        </ul>
+        <NavList clase="nav__ul" />
 </nav>
 
 <nav class="nav--escritorio">
-   <ul class="nav__ul">
-          <li><a href=`${Base}`>Inicio</a></li>
-          <li><a href=`${Base}/about`>¿Quienes somos?</a></li>
-          <li><a href=`${Base}/events`>Eventos</a></li>
-    </ul> 
+   <NavList clase="nav__ul" />
 </nav>
    
 <button>Iniciar sesión</button>
