--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,10 +29,10 @@ const descripcion = "Aprende, comparte y disfruta la cerveza casera en Canarias:
 		gap: 1rem;
 		padding: 1rem;
 		margin-block: 3rem;
-    @media (min-width: 601px) and (max-width: 1024px) {
+    @media (601px <= width <= 1024px) {
       max-width: 75%;
     } 
-    @media (min-width: 1025px) {
+    @media (width >= 1025px) {
       max-width: 50%;
     }
 	}
