--- a/src/components/concurso/CardConcurso.astro
+++ b/src/components/concurso/CardConcurso.astro
@@ -3,7 +3,8 @@ import { getCollection } from "astro:content";
 const concursos = (await getCollection("concursos"))
   .sort((a, b) => b.data.año - a.data.año)
   .slice(1);
-  
+
+const Base = import.meta.env.BASE_URL;
 ---
 
   {
@@ -12,7 +13,7 @@ const concursos = (await getCollection("concursos"))
       const { titulo, año, bjcp, estilo, medallas, receta, img, imgAlt } = data
       return (
         <article>
-          <img class="img" src={img} alt={imgAlt} />
+          <img class="img" src={Base + "/" + img} alt={imgAlt} />
           <hgroup>
             <h3>{titulo}</h3>
             <p><time>{año}</time></p>
