dejo prepara carpeta dinámica para expandir los concursos

--- a/src/components/concurso/CardConcurso.astro
+++ b/src/components/concurso/CardConcurso.astro
@@ -44,8 +44,7 @@ const Base = import.meta.env.BASE_URL;
     justify-content: space-between;
     align-items: center;
     @media (min-width: 601px) and (max-width: 1024px) {
-      min-width: 35%;
-      max-width: 40%;
+      width: 40%;
     } 
     @media (min-width: 1025px) {
       max-width: 25%;
