--- a/src/pages/concursos.astro
+++ b/src/pages/concursos.astro
@@ -39,6 +39,9 @@ import saison from "../assets/images/concursos/2024.png"
       margin: auto;
       @media (601px <= width <= 1024px) {
       flex-direction: row;
+      flex-wrap: wrap;
+      gap: 1rem;
+      justify-content: center;
     }
     @media (width >= 1025px) {
       margin:auto;
