trabajo en la sección de recetas. creo coleccion y componente que pinta las recetas de forma dinámica. Estilos básicos. Las recetas se muestran con ventana modal

--- a/src/components/NavList.astro
+++ b/src/components/NavList.astro
@@ -8,4 +8,5 @@ const { clase } = Astro.props;
   <li><a href=`${Base}/about`>¿Quienes somos?</a></li>
   <li><a href=`${Base}/events`>Actividades</a></li>
   <li><a href=`${Base}/concursos`>Concursos</a></li>
+  <li><a href=`${Base}/recetas`>Recetas</a></li>
 </ul>
