Reestructura el contenido de la carpeta y configur alias para llamar a src/ con @/

--- a/src/components/NavList.astro
+++ b/src/components/NavList.astro
@@ -5,8 +5,8 @@ const { clase } = Astro.props;
 
 <ul class={clase}>
   <li><a href=`${Base}`>Inicio</a></li>
-  <li><a href=`${Base}/about`>¿Quienes somos?</a></li>
-  <li><a href=`${Base}/events`>Actividades</a></li>
+  <li><a href=`${Base}/sobre-nosotros`>¿Quienes somos?</a></li>
+  <li><a href=`${Base}/actividades`>Actividades</a></li>
   <li><a href=`${Base}/concursos`>Concursos</a></li>
   <li><a href=`${Base}/recetas`>Recetas</a></li>
 </ul>
