--- a/src/pages/actividades/index.astro
+++ b/src/pages/actividades/index.astro
@@ -1,7 +1,7 @@
 ---
-import PlantillaBasica from "../layouts/plantillaBasica.astro"
-import EventsCard from "../components/EventsCard.astro"
-import Cerveza from "../assets/images.jpg"
+import PlantillaBasica from "@/layouts/plantillaBasica.astro"
+import EventsCard from "@/components/EventsCard.astro"
+import Cerveza from "@/assets/images.jpg"
 ---
 
 <PlantillaBasica >
