--- a/src/pages/concursos/index.astro
+++ b/src/pages/concursos/index.astro
@@ -1,13 +1,13 @@
 ---
-import PlantillaBasica from "../layouts/plantillaBasica.astro";
+import PlantillaBasica from "@/layouts/plantillaBasica.astro";
 const titulo = "Concursos — Asociación Canaria de Cerveceros Caseros";
 const descripcion = "Convocatorias de concursos de cerveza casera en Canarias: bases, inscripción y fechas. Histórico de ediciones, ganadores y recetas premiadas.";
-import EventsCard from "../components/EventsCard.astro";
-import HeroConcurso from "../components/concurso/HeroConcurso.astro";
-import CardConcurso from "../components/concurso/CardConcurso.astro";
+import EventsCard from "@/components/EventsCard.astro";
+import HeroConcurso from "@/components/concurso/HeroConcurso.astro";
+import CardConcurso from "@/components/concurso/CardConcurso.astro";
 import { Picture } from "astro:assets";
-import cali from "../assets/images/california169.png"
-import saison from "../assets/images/concursos/2024.png"
+import cali from "@/assets/images/california169.png"
+
 ---
 
  <!-- const { src, alt, año, estilo} -->
