--- a/src/pages/recetas/index.astro
+++ b/src/pages/recetas/index.astro
@@ -1,8 +1,8 @@
 ---
-import PlantillaBasica from "../layouts/plantillaBasica.astro";
+import PlantillaBasica from "@/layouts/plantillaBasica.astro";
 const titulo = "Recetas — Asociación Canaria de Cerveceros Caseros";
 const descripcion = "Recetas de cerveza casera" 
-import CardRecetas from "../components/recetas/CardRecetas.astro";
+import CardRecetas from "@/components/recetas/CardRecetas.astro";
 
 ---
 
