--- a/src/pages/sobre-nosotros/index.astro
+++ b/src/pages/sobre-nosotros/index.astro
@@ -1,6 +1,6 @@
 ---
-import PlantillaBasica from "../layouts/plantillaBasica.astro"
-import Hero from "../components/hero.astro"
+import PlantillaBasica from "@/layouts/plantillaBasica.astro"
+import Hero from "@/components/hero.astro"
 const titulo = "Sobre la Asociación Canaria de Cerveceros Caseros";
 const descripcion = "Conoce la comunidad canaria de homebrewers: aprendemos, compartimos y disfrutamos la cerveza casera con talleres, guías y eventos por islas."
 ---
